# vita-launcher

./: CMakeLists.txt  README.md  default_style.ini
adr6.9_placeholder/: CMakeLists.txt
adr6.9_placeholder/sce_sys/livearea/contents/: template.xml
adr_launcher/: .gitignore  AdrenalineLauncher.vpk  AdrenalineLauncher.vpk_param.sfo  CMakeCache.txt  Makefile  cmake_install.cmake
extract_eboot/: CMakeLists.txt  build.sh  cross-compile.cmake
extract_eboot/src/: cso.cpp  cso.h  eboot.cpp  eboot.h  fs.cpp  fs.h  iso.cpp  main.cpp
sqlite-3.6.23.1/: Makefile  config.status  configure  libtool  sqlite3.pc
sqlite-3.6.23.1/autom4te.cache/: output.0  requests  traces.0
src/: audio.c  audio.h  certs.h  config.cpp  config.h  cso.cpp  db.cpp  db.h  debugScreen.c  eboot.cpp  eboot.h  fs.cpp  fs.h  ftpclient.cpp  ftpclient.h  game.cpp  game.h  gui.cpp  gui.h  ime_dialog.cpp  ime_dialog.h  inifile.c  inifile.h  init.c  init.h  iso.cpp  iso.h  iso9660.h  launcher.cpp  main.cpp  net.cpp  net.h  ogg.c  ogg.h  pfs.c  pfs.h  sfo.cpp  sfo.h  style.cpp  style.h  (+8 more)
styles/: BlackGold.ini  Cherry.ini  Dark.ini  Half-Life.ini  README.md
thumbnails_db/: a2600.db  a5200.db  a7800.db  aLynx.db  amiga.db  bandai.db  c64.db  dreamcast.db  easyrpg.db  gaw.db  gb.db  gba.db  gbc.db  ggear.db  gms.db  mame2k3.db  mame_mapping.db  mdrive.db  msx1.db  msx2.db  msystem.db  n64.db  nec.db  neogeo.db  neogeocd.db  neogeopc.db  nes.db  ps1.db  scummvm.db  sega32x.db  segacd.db  snes.db  tgrafx.db  vectrex.db
yoyo_launcher/: CMakeLists.txt  yoyo_version.txt
yoyo_launcher/sce_sys/livearea/contents/: template.xml
yoyo_launcher/src/: main.cpp
